Archive2/b2/6c61bb0353e6d8/output
main.cpp:1:1: error: 'ClassA' does not name a type
 ClassA & operator << ( ClassA &, int32_t )
 ^
main.cpp:10:13: error: 'ClassA' has not been declared
     insert( ClassA & c ) const;
             ^
main.cpp:10:26: error: ISO C++ forbids declaration of 'insert' with no type [-fpermissive]
     insert( ClassA & c ) const;
                          ^
main.cpp:11:5: error: expected unqualified-id before '...' token
     ...
     ^
main.cpp:16:36: error: expected template-name before '<' token
 struct  InsertOpt : binary_function<ClassA, int, ClassA&>
                                    ^
main.cpp:16:36: error: expected '{' before '<' token
main.cpp:16:36: error: expected unqualified-id before '<' token
